fixed bird overflow on right of screen

--- a/src/components/scavenger.scss
+++ b/src/components/scavenger.scss
@@ -33,7 +33,7 @@
       margin-left: 0%;
     }
     to {
-      margin-left: calc(100vw - 52px);
+      margin-left: calc(100vw - 90px);
     }
   }
 }
